[package]
name = "spectacles"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["gateway", "brokers/*", "test_gen"]

[dependencies]
bson = "2.4.0"
futures = "0.3.25"
serde = { version = "1.0.147", features = ["derive"] }
tokio = "1.21.2"
tokio-stream = { version = "0.1.11", features = ["sync"] }
tracing = "0.1.37"
