[package]
name = "spectacles"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["gateway", "brokers/*", "test_gen"]

[dependencies]
futures = "0.3.25"
rmp-serde = "1.1.1"
rmpv = { version = "1.0.0", features = ["with-serde"] }
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.21.2", features = ["rt"] }
tokio-stream = { version = "0.1.11", features = ["sync"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
