[package]
name = "gateway2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
config = "0.13.2"
futures = "0.3.24"
serde = { version = "1.0.145", features = ["derive"] }
twilight-gateway = "0.13.3"
twilight-http = "0.13.2"
twilight-model = "0.13.5"
capnp = "0.14.10"
serde_json = "1.0.86"
tracing-subscriber = "0.3.16"
tracing = "0.1.37"

[dependencies.tokio]
version = "1.21.2"
features = ["rt-multi-thread", "tracing", "macros"]

[build-dependencies]
capnpc = "0.14.9"
