[package]
name = "spectacles-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
config = "0.13.2"
futures = "0.3.24"
serde = { version = "1.0.145" }
twilight-gateway = "0.13.3"
twilight-http = "0.13.2"
twilight-model = "0.13.5"
tracing-subscriber = "0.3.16"
tracing = "0.1.37"
flexbuffers = "2.0.0"
spectacles = { version = "0.1.0", path = ".." }

[dependencies.tokio]
version = "1.21.2"
features = ["rt-multi-thread", "tracing", "macros"]
