[package]
name = "spectacles-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
bson = "2.4.0"
config = "0.13.2"
futures = "0.3.24"
serde = { version = "1.0.145" }
spectacles = { version = "0.1.0", path = ".." }
twilight-gateway = "0.13.3"
twilight-http = "0.13.2"
twilight-model = "0.13.5"
tracing = "0.1.37"

[dependencies.tokio]
version = "1.21.2"
features = ["rt-multi-thread", "tracing", "macros", "io-std"]
