[package]
name = "spectacles-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
axum = "0.5.17"
bson = "2.4.0"
bytes = "1.2.1"
futures = "0.3.25"
reqwest = "0.11.12"
spectacles = { version = "0.1.0", path = "../.." }
structopt = "0.3.26"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
