[package]
name = "spectacles-json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
flexbuffers = "2.0.0"
serde-transcode = "1.1.1"
serde_json = "1.0.87"
tokio-util = { version = "0.7.4", features = ["io"] }
serde = "1.0.147"
futures = "0.3.25"

[dependencies.tokio]
version = "1.21.2"
features = ["io-util", "io-std", "macros", "rt"]
