[package]
name = "spectacles-mqtt"
version = "0.1.0"
edition = "2021"
description = "Proxy STDIO with an MQTT server using BSON."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bson = "2.4.0"
clap = { version = "4.0.26", features = ["derive", "env"] }
config = "0.13.2"
humantime = "2.1.0"
paho-mqtt = "0.11.1"
serde = "1.0.147"
spectacles = { version = "0.1.0", path = "../.." }
