[package]
name = "spectacles-mqtt"
version = "0.1.0"
edition = "2021"
description = "Proxy STDIO with an MQTT server using BSON."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.26", features = ["derive", "env"] }
config = "0.13.2"
humantime = "2.1.0"
paho-mqtt = { version = "0.11.1", features = ["vendored-ssl"], default-features = false }
serde = { version = "1.0.147", features = ["derive"] }
spectacles = { version = "0.1.0", path = "../.." }
